# application-correction-old2023

./: .gitignore  .nojekyll  Dockerfile  README.md  _quarto.yml  api.py  build_features.py  config.yaml  environment.yml  eval.py  import_data.py  index.html  index.qmd  install.sh  main.py  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml  titanic.ipynb  titanic.py  train.py  train_evaluate.py
.github/workflows/: ci.yaml  docker.yml  prod.yml  publish.yaml  test.yaml  test.yml
api/: main.py  run.sh
argocd/: pipeline.yaml
checkpoints/application1/: titanic.py
checkpoints/application10/: pyproject.toml
checkpoints/application10/docs/: main.py
checkpoints/application10/docs/notebooks/: titanic.ipynb
checkpoints/application10/src/titanicml/: import_data.py
checkpoints/application3/: titanic.py
checkpoints/application7/: README.md
checkpoints/application9/: test_create_variable_title.py
configuration/: config.yaml
deployment/: deployment.yaml  ingress.yaml  service.yaml
docs/: main.py
mlflow/: pipeline.yaml  predict.py  record.py
notebooks/: titanic.html
src/features/: build_features.py
src/models/: record.py  train_evaluate.py
tests/: test_create_variable_title.py
titanicml/: __init__.py
titanicml/data/: import_data.py
